--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -122,7 +122,7 @@ chapter:
     Chapter
 
 name:
-    Nome
+    Name
 
 season:
     Season
@@ -326,7 +326,7 @@ del_season_button:
     ✖️ Delete season
 
 confirm_text: |
-    Para continuar, confirme usando o botão abaixo.
+    To continue, confirm using the button below.
 
 confirm_button:
     ✔️ Confirm
@@ -341,7 +341,7 @@ mark_as_watched_button:
     ✅ Mark as watched
 
 mark_as_unwatched_button:
-    👁️ Mark as unattended
+    👁️ Mark as unwatched
 
 previous_button:
     ⏪ Previous
