modules: anime: initial support for dubbed episodes

--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -441,6 +441,9 @@ how_to_use_text: |
 how_to_use_button:
     ❓ How to use?
 
+subtitled_button:
+    🈁 Subtitled
+
 
 # Alerts
 added_to_favorites_alert:
